add unit test for different and new cases