@@ -1,6 +1,7 @@
 package com.intelliacademy.orizonroute.librarymanagmentsystem;
 
 import com.intelliacademy.orizonroute.librarymanagmentsystem.dto.AuthorDTO;
+import com.intelliacademy.orizonroute.librarymanagmentsystem.exception.AuthorNotFoundException;
 import com.intelliacademy.orizonroute.librarymanagmentsystem.mapper.AuthorMapper;
 import com.intelliacademy.orizonroute.librarymanagmentsystem.model.Author;
 import com.intelliacademy.orizonroute.librarymanagmentsystem.repository.AuthorRepository;
@@ -11,13 +12,15 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -47,9 +50,9 @@ class AuthorServiceTest {
     }
 
     @Test
-    void givenAuthorsExist_whenGetAllAuthors_thenReturnAuthorDTOList() {
-        List<Author> authors = Arrays.asList(author);
-        List<AuthorDTO> authorDTOs = Arrays.asList(authorDTO);
+    void getAllAuthors_shouldReturnAuthorDTOList() {
+        List<Author> authors = List.of(author);
+        List<AuthorDTO> authorDTOs = List.of(authorDTO);
 
         when(authorRepository.findAll()).thenReturn(authors);
         when(authorMapper.toAuthorDTOList(authors)).thenReturn(authorDTOs);
@@ -59,12 +62,47 @@ class AuthorServiceTest {
         assertThat(result).isNotNull().hasSize(1);
         assertThat(result.get(0).getFullName()).isEqualTo("John Doe");
 
-        verify(authorRepository, times(1)).findAll();
-        verify(authorMapper, times(1)).toAuthorDTOList(authors);
+        verify(authorRepository).findAll();
+        verify(authorMapper).toAuthorDTOList(authors);
     }
 
     @Test
-    void givenValidId_whenGetAuthorById_thenReturnAuthorDTO() {
+    void getAllAuthors_whenNoAuthorsExist_shouldThrowException() {
+        when(authorRepository.findAll()).thenReturn(List.of());
+
+        assertThatThrownBy(() -> authorService.getAllAuthors())
+                .isInstanceOf(AuthorNotFoundException.class);
+
+        verify(authorRepository).findAll();
+    }
+
+    @Test
+    void getAuthors_shouldReturnPagedAuthorDTOs() {
+        PageRequest pageable = PageRequest.of(0, 5);
+        Page<Author> authorPage = new PageImpl<>(List.of(author));
+
+        when(authorRepository.findAll(pageable)).thenReturn(authorPage);
+        when(authorMapper.toAuthorDTO(author)).thenReturn(authorDTO);
+
+        Page<AuthorDTO> result = authorService.getAuthors(pageable);
+
+        assertThat(result).isNotEmpty();
+        verify(authorRepository).findAll(pageable);
+    }
+
+    @Test
+    void getAuthors_whenNoAuthorsExist_shouldThrowException() {
+        PageRequest pageable = PageRequest.of(0, 5);
+        when(authorRepository.findAll(pageable)).thenReturn(Page.empty());
+
+        assertThatThrownBy(() -> authorService.getAuthors(pageable))
+                .isInstanceOf(AuthorNotFoundException.class);
+
+        verify(authorRepository).findAll(pageable);
+    }
+
+    @Test
+    void getAuthorById_shouldReturnAuthorDTO() {
         when(authorRepository.findById(1L)).thenReturn(Optional.of(author));
         when(authorMapper.toAuthorDTO(author)).thenReturn(authorDTO);
 
@@ -73,24 +111,22 @@ class AuthorServiceTest {
         assertThat(result).isPresent();
         assertThat(result.get().getFullName()).isEqualTo("John Doe");
 
-        verify(authorRepository, times(1)).findById(1L);
-        verify(authorMapper, times(1)).toAuthorDTO(author);
+        verify(authorRepository).findById(1L);
+        verify(authorMapper).toAuthorDTO(author);
     }
 
     @Test
-    void givenInvalidId_whenGetAuthorById_thenReturnEmptyOptional() {
+    void getAuthorById_whenAuthorDoesNotExist_shouldThrowException() {
         when(authorRepository.findById(2L)).thenReturn(Optional.empty());
 
-        Optional<AuthorDTO> result = authorService.getAuthorById(2L);
+        assertThatThrownBy(() -> authorService.getAuthorById(2L))
+                .isInstanceOf(AuthorNotFoundException.class);
 
-        assertThat(result).isEmpty();
-
-        verify(authorRepository, times(1)).findById(2L);
-        verify(authorMapper, times(0)).toAuthorDTO(any());
+        verify(authorRepository).findById(2L);
     }
 
     @Test
-    void givenValidId_whenGetAuthorEntityById_thenReturnAuthor() {
+    void getAuthorEntityById_shouldReturnAuthor() {
         when(authorRepository.findById(1L)).thenReturn(Optional.of(author));
 
         Author result = authorService.getAuthorEntityById(1L);
@@ -98,33 +134,32 @@ class AuthorServiceTest {
         assertThat(result).isNotNull();
         assertThat(result.getFullName()).isEqualTo("John Doe");
 
-        verify(authorRepository, times(1)).findById(1L);
+        verify(authorRepository).findById(1L);
     }
 
     @Test
-    void givenInvalidId_whenGetAuthorEntityById_thenThrowException() {
+    void getAuthorEntityById_whenAuthorDoesNotExist_shouldThrowException() {
         when(authorRepository.findById(2L)).thenReturn(Optional.empty());
 
-        Exception exception = assertThrows(RuntimeException.class, () -> authorService.getAuthorEntityById(2L));
+        assertThatThrownBy(() -> authorService.getAuthorEntityById(2L))
+                .isInstanceOf(AuthorNotFoundException.class);
 
-        assertThat(exception.getMessage()).isEqualTo("Author not found with ID: 2");
-
-        verify(authorRepository, times(1)).findById(2L);
+        verify(authorRepository).findById(2L);
     }
 
     @Test
-    void givenAuthorsExist_whenGetAuthorCount_thenReturnCorrectCount() {
+    void getAuthorCount_shouldReturnCorrectCount() {
         when(authorRepository.count()).thenReturn(10L);
 
         long result = authorService.getAuthorCount();
 
         assertThat(result).isEqualTo(10L);
 
-        verify(authorRepository, times(1)).count();
+        verify(authorRepository).count();
     }
 
     @Test
-    void givenValidAuthorDTO_whenSaveAuthor_thenReturnSavedAuthorDTO() {
+    void saveAuthor_shouldReturnSavedAuthorDTO() {
         when(authorMapper.toAuthor(authorDTO)).thenReturn(author);
         when(authorRepository.save(author)).thenReturn(author);
         when(authorMapper.toAuthorDTO(author)).thenReturn(authorDTO);
@@ -134,17 +169,28 @@ class AuthorServiceTest {
         assertThat(result).isNotNull();
         assertThat(result.getFullName()).isEqualTo("John Doe");
 
-        verify(authorMapper, times(1)).toAuthor(authorDTO);
-        verify(authorRepository, times(1)).save(author);
-        verify(authorMapper, times(1)).toAuthorDTO(author);
+        verify(authorMapper).toAuthor(authorDTO);
+        verify(authorRepository).save(author);
+        verify(authorMapper).toAuthorDTO(author);
     }
 
     @Test
-    void givenValidId_whenDeleteAuthor_thenRepositoryDeleteCalled() {
+    void deleteAuthor_shouldDeleteAuthor() {
+        when(authorRepository.existsById(1L)).thenReturn(true);
         doNothing().when(authorRepository).deleteById(1L);
 
         authorService.deleteAuthor(1L);
 
-        verify(authorRepository, times(1)).deleteById(1L);
+        verify(authorRepository).deleteById(1L);
+    }
+
+    @Test
+    void deleteAuthor_whenAuthorDoesNotExist_shouldThrowException() {
+        when(authorRepository.existsById(2L)).thenReturn(false);
+
+        assertThatThrownBy(() -> authorService.deleteAuthor(2L))
+                .isInstanceOf(AuthorNotFoundException.class);
+
+        verify(authorRepository).existsById(2L);
     }
 }
